CAMBIOS DISEÑO MAPA

--- a/viewsFooter/menusitio.html
+++ b/viewsFooter/menusitio.html
@@ -89,7 +89,7 @@
 
     <h1>Mapa de Sitio</h1>
     
-    <table>
+    <table class="table">
         <tr>
             <!-- Fila 1 -->
             <td>
