--- a/viewsFooter/menusitio.html
+++ b/viewsFooter/menusitio.html
@@ -69,6 +69,7 @@
         <div class="bread">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="/views/index.html">Inicio</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Mapa de Sitio</li>
                 </ol>
             </nav>  
