--- a/viewsPerfumes/ver-cryst.html
+++ b/viewsPerfumes/ver-cryst.html
@@ -51,15 +51,15 @@
                 <li>
                     <a href="/views/ofertas.html">Ofertas</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Nautica Voyage</a></li>
-                        <li><a href="/views/construccion.html">Versace Bright Crystal</a></li>
+                        <li><a href="/viewsPerfumes/nau-voy.html">Nautica Voyage</a></li>
+                        <li><a href="/viewsPerfumes/ver-cryst.html">Versace Bright Crystal</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="/views/productosNuevos.html">Novedades</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">YSL MYSELF</a></li>
-                        <li><a href="/views/construccion.html">Bvlgari Allegra Chill & Sole</a></li>
+                        <li><a href="/viewsPerfumes/myslf.html">YSL MYSELF</a></li>
+                        <li><a href="/viewsPerfumes/bvl-alle.html">Bvlgari Allegra Chill & Sole</a></li>
                     </ul>
                 </li>
                 <li>
