MODIFICACIONES FOOTER MAPA DE SITIO

--- a/viewsFooter/carrera.html
+++ b/viewsFooter/carrera.html
@@ -45,6 +45,7 @@
                 <li><a href="/viewsFooter/politica.html">Politica de Empresa</a></li>
                 <li><a href="/viewsFooter/terminos.html">Terminos y Condiciones</a></li>
                 <li><a href="/viewsFooter/carrera.html">Carrera</a></li>
+                <li><a href="/viewsFooter/menusitio.html">Mapa de Sitio</a></li>
             </ul>
         </div>
             
