--- a/viewsPerfumes/bvl-alle.html
+++ b/viewsPerfumes/bvl-alle.html
@@ -100,8 +100,8 @@
         <div class="bread">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item active" aria-current="page"><a href="/views/index.html">Inicio</a></li>
-                  <li class="breadcrumb-item active" aria-current="page"><a href="/views/ofertas.html">Inicio</a></li>
+                    <li class="breadcrumb-item active" aria-current="page"><a href="/views/index.html">Inicio</a></li>
+                    <li class="breadcrumb-item active" aria-current="page"><a href="/views/productosNuevos.html">Novedads</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Bvlgari Allegra Chill & Sole</li>
                 </ol>
             </nav>  
@@ -172,7 +172,7 @@
                     <li><a href="/viewsFooter/politica.html">Politica de Empresa</a></li>
                     <li><a href="/viewsFooter/terminos.html">Terminos y Condiciones</a></li>
                     <li><a href="/viewsFooter/carrera.html">Carrera</a></li>
-                    <li><a href="/viewsFooter/menusitio.html">Menu de Sitio</a></li>
+                    <li><a href="/viewsFooter/menusitio.html">Mapa de Sitio</a></li>
                 </ul>
             </ul>
         </div>
