--- a/viewsPerfumes/nau-voy.html
+++ b/viewsPerfumes/nau-voy.html
@@ -101,7 +101,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item active" aria-current="page"><a href="/views/index.html">Inicio</a></li>
-                  <li class="breadcrumb-item active" aria-current="page"><a href="/views/ofertas.html">Inicio</a></li>
+                  <li class="breadcrumb-item active" aria-current="page"><a href="/views/ofertas.html">Ofertas</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Nautica Voyage</li>
                 </ol>
             </nav>  
@@ -172,7 +172,7 @@
                     <li><a href="/viewsFooter/politica.html">Politica de Empresa</a></li>
                     <li><a href="/viewsFooter/terminos.html">Terminos y Condiciones</a></li>
                     <li><a href="/viewsFooter/carrera.html">Carrera</a></li>
-                    <li><a href="/viewsFooter/menusitio.html">Menu de Sitio</a></li>
+                    <li><a href="/viewsFooter/menusitio.html">Mapa de Sitio</a></li>
                 </ul>
             </ul>
         </div>
