--- a/viewsPerfumes/hawa-ice.html
+++ b/viewsPerfumes/hawa-ice.html
@@ -51,29 +51,29 @@
                 <li>
                     <a href="/views/ofertas.html">Ofertas</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Nautica Voyage</a></li>
-                        <li><a href="/views/construccion.html">Versace Bright Crystal</a></li>
+                        <li><a href="/viewsPerfumes/nau-voy.html">Nautica Voyage</a></li>
+                        <li><a href="/viewsPerfumes/ver-cryst.html">Versace Bright Crystal</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="/views/productosNuevos.html">Novedades</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">YSL MYSELF</a></li>
-                        <li><a href="/views/construccion.html">Bvlgari Allegra Chill & Sole</a></li>
+                        <li><a href="/viewsPerfumes/myslf.html">YSL MYSELF</a></li>
+                        <li><a href="/viewsPerfumes/bvl-alle.html">Bvlgari Allegra Chill & Sole</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="/views/damas.html">Damas</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Calvin Klein Beauty</a></li>
-                        <li><a href="/views/construccion.html">Miss Dior</a></li>
+                        <li><a href="/viewsPerfumes/kal-klein.html">Calvin Klein Beauty</a></li>
+                        <li><a href="/viewsPerfumes/miss-dior.html">Miss Dior</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="/views/caballeros.html">Caballeros</a>
                     <ul class="submenu">
-                        <li><a href="/views/construccion.html">Hawa ICE</a></li>
-                        <li><a href="/views/construccion.html">Stronger With You Intensely</a></li>
+                        <li><a href="/viewsPerfumes/hawa-ice.html">Hawa ICE</a></li>
+                        <li><a href="/viewsPerfumes/str-with.html">Stronger With You Intensely</a></li>
                     </ul>
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item active" aria-current="page"><a href="/views/index.html">Inicio</a></li>
                   <li class="breadcrumb-item active" aria-current="page"><a href="/views/ofertas.html">Inicio</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Miss Dior</li>
+                  <li class="breadcrumb-item active" aria-current="page">Hawas ICE</li>
                 </ol>
             </nav>  
         </div>
