--- a/viewsPerfumes/kal-klein.html
+++ b/viewsPerfumes/kal-klein.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/styles/comentario.css">
     <link rel="shortcut icon" href="/img/icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Kalvin Klein Beauty</title>
+    <title>Calvin Klein Beauty</title>
     <style>
         .container {
             background: white;
@@ -101,8 +101,8 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item active" aria-current="page"><a href="/views/index.html">Inicio</a></li>
-                  <li class="breadcrumb-item active" aria-current="page"><a href="/views/ofertas.html">Inicio</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Kalvin Klein Beauty</li>
+                  <li class="breadcrumb-item active" aria-current="page"><a href="/views/ofertas.html">Ofertas</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Calvin Klein Beauty</li>
                 </ol>
             </nav>  
         </div>
