--- a/viewsPerfumes/dior-new.html
+++ b/viewsPerfumes/dior-new.html
@@ -12,7 +12,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>Calvin Klein Beauty</title>
+    <title>Nautica Voyage</title>
     <style>
       .container {
         background: white;
@@ -129,10 +129,10 @@
               <a href="/views/index.html">Inicio</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
-              <a href="/views/ofertas.html">Damas</a>
+              <a href="/views/productosNuevos.html">Novedades</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
-              Calvin Klein Beauty
+                Dior New Look
             </li>
           </ol>
         </nav>
@@ -147,14 +147,12 @@
 
     <div class="container">
       <img
-        src="https://th.bing.com/th/id/OIP.PFQZCTvedD7a1GyiR2EMEwHaHa?pid=ImgDet&w=180&h=180&c=7"
-        alt="Kalvin klein Beauty"
+        src="https://th.bing.com/th/id/OIP.cPb7O0wRGsFImp7vW4rAYAHaIA?pid=ImgDet&w=161&h=161&c=7&dpr=1.5"
+        alt="Dior New Look"
       />
-      <h2>Calvin Klein Beauty</h2>
-      <p class="price">$799.99 MXN</p>
-      <p>
-        Este perfume es un floral bello, con un toque cremoso y muy amaderado.
-      </p>
+      <h2>Dior New Look</h2>
+      <p class="price">$3,299.99 MXN</p>
+      <p>Un aroma sofisticado y duradero para cualquier ocasión especial.</p>
       <button><a href="/views/construccion.html">Agregar al Carrito</a></button>
     </div>
 
@@ -213,7 +211,7 @@
                 <a href="/viewsFooter/terminos.html">Terminos y Condiciones</a>
               </li>
               <li><a href="/viewsFooter/carrera.html">Carrera</a></li>
-              <li><a href="/viewsFooter/menusitio.html">Menu de Sitio</a></li>
+              <li><a href="/viewsFooter/menusitio.html">Mapa de Sitio</a></li>
             </ul>
           </ul>
         </div>
