--- a/viewsPerfumes/ver-pour.html
+++ b/viewsPerfumes/ver-pour.html
@@ -12,7 +12,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>Nautica Voyage</title>
+    <title>Versace Pour Homme</title>
     <style>
       .container {
         background: white;
